--- a/package.json
+++ b/package.json
@@ -10,24 +10,35 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "~49.0.15",
-    "expo-status-bar": "~1.6.0",
+    "color": "^4.2.3",
+    "expo": "^50.0.0",
+    "expo-file-system": "~16.0.7",
+    "expo-image-picker": "~14.7.1",
+    "expo-media-library": "~15.9.1",
+    "expo-notifications": "~0.27.6",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.4",
+    "react-native-calendars": "^1.1304.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modal-dropdown": "^1.0.2",
+    "react-native-notifications": "^5.1.0",
     "react-native-paper": "^5.11.3",
     "react-native-picker-select": "^9.0.0",
     "react-native-radio-buttons-group": "^3.0.5",
-    "uuid": "^9.0.1"
+    "react-native-wheel-color-picker": "^1.3.1",
+    "uuid": "^9.0.1",
+    "expo-calendar": "~12.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.2.46"
+    "@types/react": "~18.2.45"
   },
   "private": true
 }
