--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "color": "^4.2.3",
     "expo": "^50.0.0",
+    "expo-calendar": "~12.2.1",
     "expo-file-system": "~16.0.7",
     "expo-image-picker": "~14.7.1",
     "expo-media-library": "~15.9.1",
     "expo-notifications": "~0.27.6",
+    "expo-sharing": "~11.10.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-calendars": "^1.1304.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-modal-dropdown": "^1.0.2",
@@ -32,9 +36,10 @@
     "react-native-paper": "^5.11.3",
     "react-native-picker-select": "^9.0.0",
     "react-native-radio-buttons-group": "^3.0.5",
+    "react-native-svg": "^15.0.0",
     "react-native-wheel-color-picker": "^1.3.1",
     "uuid": "^9.0.1",
-    "expo-calendar": "~12.2.1"
+    "victory-native": "^36.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
