--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-svg": "^15.0.0",
     "react-native-wheel-color-picker": "^1.3.1",
     "uuid": "^9.0.1",
-    "victory-native": "^36.9.1"
+    "victory-native": "^36.9.1",
+    "expo-linear-gradient": "~12.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
